Add tests for Service